# codex-zai-proxy

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: install.md  llm-install.md  release.md
docs/release-notes/: v0.1.0.md
examples/: codex-config.toml
scripts/: package-release.py  verify-checksums.py
src/: lib.rs  main.rs
