[package]
name = "codex-zai-proxy"
version = "0.1.0"
edition = "2021"
description = "A small stdio-to-HTTP MCP compatibility proxy for Codex and strict MCP clients."
license = "MIT OR Apache-2.0"
repository = "https://github.com/blib/codex-zai-proxy"
readme = "README.md"
keywords = ["mcp", "codex", "proxy", "stdio", "json-rpc"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
